--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,10 +14,11 @@ services:
       - AGGREGATOR_CERT_FILE=/app/certs/server.crt
       - AGGREGATOR_KEY_FILE=/app/certs/server.key
       - AGGREGATOR_CA_CERT_FILE=/app/certs/ca.crt
-      - AGGREGATOR_INFLUX_URL=http://influxdb:8086
-      - AGGREGATOR_INFLUX_TOKEN=${INFLUX_TOKEN}
-      - AGGREGATOR_INFLUX_ORG=${INFLUX_ORG}
-      - AGGREGATOR_INFLUX_BUCKET=${INFLUX_BUCKET}
+      - CERTREG_URL=certregistry:9081
+      - INFLUX_URL=http://influxdb:8086
+      - INFLUX_TOKEN=${INFLUX_TOKEN}
+      - INFLUX_ORG=${INFLUX_ORG}
+      - INFLUX_BUCKET=${INFLUX_BUCKET}
     volumes:
       - ./aggregator/certs:/app/certs
     networks:
@@ -25,6 +26,32 @@ services:
     depends_on:
       influxdb:
         condition: service_healthy
+      certregistry:
+        condition: service_healthy
+
+  certregistry:
+    build:
+      context: ./certregistry
+      dockerfile: Dockerfile
+    environment:
+      - REDIS_URL=redis://redis:6379
+      - CERTREG_PORT=9081
+      - CERTREG_CA_CERT_FILE=/app/certs/ca.crt
+      - CERTREG_KEY_FILE=/app/certs/server.key
+    volumes:
+      - ./certregistry/certs:/app/certs
+    networks:
+      - watson-net
+    depends_on:
+      redis:
+        condition: service_healthy
+    ports:
+      - "9081:9081"
+    healthcheck:
+      test: ["CMD-SHELL", "nc -z localhost 9081"]
+      interval: 5s
+      timeout: 10s
+      retries: 5
 
   influxdb:
     image: influxdb:2
@@ -49,9 +76,23 @@ services:
       timeout: 10s
       retries: 5
 
+  redis:
+    image: redis:7-alpine
+    volumes:
+      - redis-data:/data
+    command: redis-server --appendonly yes
+    networks:
+      - watson-net
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 10s
+      retries: 5
+
 networks:
   watson-net:
     driver: bridge
 
 volumes:
   influxdb-data:
+  redis-data:
