--- a/UEBA/requirements.txt
+++ b/UEBA/requirements.txt
@@ -1,11 +1,17 @@
 certifi==2024.12.14
 contourpy==1.3.1
 cycler==0.12.1
+filelock==3.17.0
 fonttools==4.55.6
+fsspec==2024.12.0
 influxdb-client==1.48.0
+Jinja2==3.1.5
 joblib==1.4.2
 kiwisolver==1.4.8
+MarkupSafe==3.0.2
 matplotlib==3.10.0
+mpmath==1.3.0
+networkx==3.4.2
 numpy==2.2.2
 packaging==24.2
 pandas==2.2.3
@@ -18,7 +24,11 @@ scikit-learn==1.6.1
 scipy==1.15.1
 seaborn==0.13.2
 six==1.17.0
+sympy==1.13.1
 threadpoolctl==3.5.0
+torch==2.6.0
+torchaudio==2.6.0
+torchvision==0.21.0
 typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
