--- a/UEBA/requirements.txt
+++ b/UEBA/requirements.txt
@@ -1,34 +1,200 @@
-certifi==2024.12.14
-contourpy==1.3.1
-cycler==0.12.1
-filelock==3.17.0
-fonttools==4.55.6
-fsspec==2024.12.0
-influxdb-client==1.48.0
-Jinja2==3.1.5
-joblib==1.4.2
-kiwisolver==1.4.8
-MarkupSafe==3.0.2
-matplotlib==3.10.0
-mpmath==1.3.0
-networkx==3.4.2
-numpy==2.2.2
-packaging==24.2
-pandas==2.2.3
-pillow==11.1.0
-pyparsing==3.2.1
-python-dateutil==2.9.0.post0
-pytz==2024.2
-reactivex==4.0.4
-scikit-learn==1.6.1
-scipy==1.15.1
-seaborn==0.13.2
-six==1.17.0
-sympy==1.13.1
-threadpoolctl==3.5.0
-torch==2.6.0
-torchaudio==2.6.0
-torchvision==0.21.0
-typing_extensions==4.12.2
-tzdata==2025.1
-urllib3==2.3.0
+absl-py==1.3.0
+aiofiles==22.1.0
+aiohttp==3.8.4
+aiosignal==1.3.1
+aiosqlite==0.18.0
+annotated-types==0.6.0
+anyio==3.6.2
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.3
+asgiref==3.7.2
+asttokens==2.1.0
+astunparse==1.6.3
+async-generator==1.10
+async-timeout==4.0.2
+attrs==22.1.0
+Babel==2.11.0
+backcall==0.2.0
+beautifulsoup4==4.11.1
+bleach==5.0.1
+cachetools==5.2.0
+certifi==2022.9.24
+cffi==1.15.1
+channels==4.0.0
+charset-normalizer==2.1.1
+click==8.1.3
+colorama==0.4.6
+colorgram.py==1.2.0
+comm==0.1.3
+common==0.1.2
+comtypes==1.1.14
+contourpy==1.0.6
+cycler==0.11.0
+debugpy==1.6.7
+decorator==5.1.1
+defusedxml==0.7.1
+Deprecated==1.2.13
+distro==1.9.0
+Django==5.0.1
+django-cors-headers==4.3.1
+django-filter==24.2
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.1
+entrypoints==0.4
+exceptiongroup==1.0.4
+executing==1.2.0
+fastjsonschema==2.16.2
+Flask==2.2.2
+Flask-MySQLdb==2.0.0
+Flask-SQLAlchemy==3.0.2
+Flask-WTF==1.1.1
+flatbuffers==22.12.6
+fonttools==4.38.0
+fqdn==1.5.1
+frozenlist==1.3.3
+gast==0.4.0
+google-auth==2.15.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+greenlet==2.0.1
+grpcio==1.51.1
+h11==0.14.0
+h5py==3.7.0
+httpcore==1.0.2
+httpx==0.26.0
+idna==3.4
+ipykernel==6.23.1
+ipython==8.6.0
+ipython-genutils==0.2.0
+ipywidgets==8.0.2
+isoduration==20.11.0
+itsdangerous==2.1.2
+jedi==0.18.1
+Jinja2==3.1.2
+joblib==1.2.0
+json5==0.9.11
+jsonpointer==2.3
+jsonschema==4.17.3
+jupyter-events==0.5.0
+jupyter-server==1.23.2
+jupyter-ydoc==0.2.2
+jupyter_client==8.2.0
+jupyter_core==5.3.0
+jupyter_server_fileid==0.6.0
+jupyter_server_ydoc==0.6.1
+jupyterlab==3.6.1
+jupyterlab_server==2.19.0
+keras==2.11.0
+kiwisolver==1.4.4
+libclang==14.0.6
+Markdown==3.4.1
+MarkupSafe==2.1.1
+matplotlib==3.6.2
+matplotlib-inline==0.1.6
+mistune==2.0.4
+mnist==0.2.2
+multidict==6.0.4
+mysqlclient==2.2.6
+nbclassic==0.4.8
+nest-asyncio==1.5.6
+newsapi==0.1.1
+nnfs==0.5.1
+notebook_shim==0.2.2
+numpy==1.23.4
+oauthlib==3.2.2
+openai==1.7.1
+opt-einsum==3.3.0
+outcome==1.2.0
+packaging==21.3
+pandas==1.5.1
+pandocfilters==1.5.0
+parso==0.8.3
+patsy==0.5.3
+pickleshare==0.7.5
+Pillow==9.2.0
+platformdirs==2.5.3
+plotly==5.11.0
+prettytable==3.4.1
+prometheus-client==0.15.0
+prompt-toolkit==3.0.32
+protobuf==3.19.6
+psutil==5.9.4
+pure-eval==0.2.2
+pyarrow==11.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+PyAudio==0.2.13
+pycparser==2.21
+pydantic==2.5.3
+pydantic_core==2.14.6
+pygame==2.6.0
+Pygments==2.13.0
+PyJWT==2.8.0
+PyMySQL==1.1.1
+pyparsing==3.0.9
+PyPDF2==3.0.1
+pyperclip==1.8.2
+pypiwin32==223
+pyrsistent==0.19.2
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-json-logger==2.0.6
+pyttsx3==2.90
+pytz==2023.3.post1
+pywin32==305
+pywinpty==2.0.9
+PyYAML==6.0
+pyzmq==24.0.1
+QtPy==2.3.0
+redis==4.3.4
+requests==2.28.1
+requests-oauthlib==1.3.1
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rsa==4.9
+scikit-learn==1.1.3
+scipy==1.9.3
+seaborn==0.12.1
+selenium==4.6.0
+Send2Trash==1.8.0
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.3.2.post1
+SpeechRecognition==3.10.0
+spotipy==2.21.0
+SQLAlchemy==1.4.43
+sqlparse==0.4.4
+stack-data==0.6.0
+statsmodels==0.13.5
+tenacity==8.1.0
+termcolor==2.1.1
+terminado==0.17.0
+threadpoolctl==3.1.0
+tinycss2==1.2.1
+tomli==2.0.1
+tornado==6.2
+tqdm==4.65.0
+traitlets==5.5.0
+trio==0.22.0
+trio-websocket==0.9.2
+twilio==7.15.1
+typing_extensions==4.9.0
+tzdata==2023.4
+uri-template==1.2.0
+urllib3==1.26.12
+vboxapi==1.0
+wcwidth==0.2.5
+webcolors==1.12
+webencodings==0.5.1
+websocket-client==1.4.2
+websockets==12.0
+Werkzeug==2.2.2
+widgetsnbextension==4.0.3
+wrapt==1.14.1
+wsproto==1.2.0
+WTForms==3.0.1
+y-py==0.5.5
+yarl==1.8.2
+ypy-websocket==0.8.2
