--- a/.env
+++ b/.env
@@ -4,9 +4,11 @@ INFLUX_PASSWORD=password
 INFLUX_ORG=docs
 INFLUX_BUCKET=mininet
 INFLUX_TOKEN=token
+INFLUX_URL=http://influxdb:8086
+INFLUX_WRITE_BUCKET=anomalies
 
 # Aggregator Configuration
 AGGREGATOR_PORT=9080
 
-INFLUX_BUCKET="mininet"
+
 USERS=["Camph0r","mininet-vm"]
