--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,6 +89,25 @@ services:
       interval: 5s
       timeout: 10s
       retries: 5
+  ueba:
+    build:
+      context: ./ueba
+      dockerfile: Dockerfile
+    env_file:
+      - .env
+
+    environment:
+      - INFLUX_URL=${INFLUX_URL}
+      - INFLUX_TOKEN=${INFLUX_TOKEN}
+      - USERS=${USERS}
+      - INFLUX_ORG=${INFLUX_ORG}
+
+    networks:
+      - watson-net
+    depends_on:
+      influxdb:
+        condition: service_healthy
+    command: ["python", "main.py"]
 
 networks:
   watson-net:
