--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,8 @@ services:
         condition: service_healthy
       certregistry:
         condition: service_healthy
+    cap_add:
+      - SYS_TIME
 
   certregistry:
     container_name: watson-certregistry
