--- a/grafana/provisioning/dashboards/dashboard.yml
+++ b/grafana/provisioning/dashboards/dashboard.yml
@@ -1,3 +1,4 @@
+# ./grafana/provisioning/dashboards/dashboard.yml
 apiVersion: 1
 
 providers:
@@ -11,3 +12,12 @@ providers:
     options:
       path: /var/lib/grafana/dashboards
       foldersFromFilesStructure: true
+
+  - name: 'influx-metrics'
+    orgId: 1
+    folder: ''
+    type: file
+    disableDeletion: false
+    updateIntervalSeconds: 30
+    options:
+      path: /etc/grafana/provisioning/dashboards
